--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
+#server config
+server.port=8081
 server.servlet.context-path=/api
+#city-list-app specific
 citylistapp.error.print.stacktrace=true
